[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/stardust.gd" type="Script" id=1]
[ext_resource path="res://sprites/fire_light2.png" type="Texture" id=2]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 4, 10, 1 )
flag_disable_z = true
gravity = Vector3( -98, 0, 0 )
angular_velocity = 1.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 360.0

[node name="stardust" type="Particles2D"]
emitting = false
amount = 200
one_shot = true
speed_scale = 4.0
process_material = SubResource( 1 )
script = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.1
energy = 1.1

[node name="follow_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="follow_tween" type="Tween" parent="."]
[connection signal="timeout" from="follow_timer" to="." method="_on_follow_timer_timeout"]
[connection signal="tween_completed" from="follow_tween" to="." method="_on_follow_tween_tween_completed"]
